# huff-treesitter

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: treesitter.yml
.github/workflows/: main.yml
bindings/c/: tree-sitter-huff.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_huff/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHuff/: huff.h
bindings/swift/TreeSitterHuffTests/: TreeSitterHuffTests.swift
examples/: buildin.huff  codetable.huff  constant.huff  decorators.huff  error.huff  function.huff  interface.huff  jumplabel.huff  jumptable.huff  macro.huff
queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: address_context.txt  advanced.txt  advanced_interfaces.txt  array_types.txt  arrays.txt  basic.txt  builtin.txt  codetable.txt  comment.txt  complete.txt  comprehensive.txt  constants.txt  decorator.txt  error.txt  event.txt  function.txt  import.txt  jump_labels.txt  jump_targets.txt  jumptable.txt  macro.txt  opcode.txt  parameter.txt  paths.txt  template_parameters.txt  test.txt  visibility.txt
