[package]
name = "tree-sitter-huff"
description = "Tree-sitter grammar for the EVM Huff language"
version = "0.1.0"
authors = ["Meek Msaki <meek10x@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "huff"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/mmsaki/huff-treesitter.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
